--- a/_posts/2020/MySQL/2020-10-26-mysql-07.md
+++ b/_posts/2020/MySQL/2020-10-26-mysql-07.md
@@ -1,5 +1,5 @@
 ---
-title: 'MySQL07 Select문 활용하기'
+title: 'MySQL07 Select 테스트를 위한 테이블과 데이터 준비'
 layout: single
 author_profile: true
 read_time: true
@@ -14,12 +14,8 @@ toc: true
 toc_sticky: true
 toc_label: Contents
 description: 비트캠프 엄진영 강사님의 수업을 듣고 정리했습니다.
-article_tag1: 1. distinct 와 all
-article_tag2: 2. order by
-article_tag3: 3. 라벨명
-article_tag4: 4. union 과 union all
-article_tag5: 5. Join
-article_tag6: 6. 서브 쿼리
+article_tag1: 1. 테이블 준비
+article_tag2: 2. 데이터 준비
 article_section: MySQL
 meta_keywords: MySQL, DBMS
 last_modified_at: '2020-10-26 22:00:00 +0800'
@@ -28,694 +24,505 @@ last_modified_at: '2020-10-26 22:00:00 +0800'
 비트캠프 서초본원 엄진영 강사님의 수업을 듣고 정리했습니다.
 
 ---
-# 1. distinct 와 all
 
-## all
-
-- 모든 데이터를 가져올 때는 all을 붙인다.
+# Select 테스트를 위한 테이블과 데이터 준비
+## 1. 테이블 준비
 
 ```sql
-select all 컬럼명 from 테이블명;
+-- 수강생
+DROP TABLE IF EXISTS stnt RESTRICT;
+
+-- 강사
+DROP TABLE IF EXISTS tcher RESTRICT;
+
+-- 강의
+DROP TABLE IF EXISTS lect RESTRICT;
+
+-- 강의실
+DROP TABLE IF EXISTS room RESTRICT;
+
+-- 매니저
+DROP TABLE IF EXISTS mgr RESTRICT;
+
+-- 수강신청
+DROP TABLE IF EXISTS lect_appl RESTRICT;
+
+-- 강의실사진
+DROP TABLE IF EXISTS room_phot RESTRICT;
+
+-- 멤버
+DROP TABLE IF EXISTS memb RESTRICT;
+
+-- 주소
+DROP TABLE IF EXISTS addr RESTRICT;
+
+-- 강의배정
+DROP TABLE IF EXISTS lect_tcher RESTRICT;
+
+-- 수강생
+CREATE TABLE stnt (
+    mno    INTEGER     NOT NULL COMMENT '수강생번호', -- 수강생번호
+    work   CHAR(1)     NOT NULL COMMENT '재직여부', -- 재직여부
+    acc_no VARCHAR(20) NULL     COMMENT '통장번호', -- 통장번호
+    bank   VARCHAR(50) NULL     COMMENT '은행명' -- 은행명
+)
+COMMENT '수강생';
+
+-- 수강생
+ALTER TABLE stnt
+    ADD CONSTRAINT PK_stnt -- 수강생 기본키
+        PRIMARY KEY (
+            mno -- 수강생번호
+        );
+
+-- 수강생 유니크 인덱스
+CREATE UNIQUE INDEX UIX_stnt
+    ON stnt ( -- 수강생
+        acc_no ASC, -- 통장번호
+        bank ASC    -- 은행명
+    );
+
+-- 강사
+CREATE TABLE tcher (
+    mno    INTEGER     NOT NULL COMMENT '강사번호', -- 강사번호
+    acc_no VARCHAR(20) NULL     COMMENT '통장번호', -- 통장번호
+    bank   VARCHAR(50) NULL     COMMENT '은행명', -- 은행명
+    hr_pay INTEGER     NULL     COMMENT '시강료' -- 시강료
+)
+COMMENT '강사';
+
+-- 강사
+ALTER TABLE tcher
+    ADD CONSTRAINT PK_tcher -- 강사 기본키
+        PRIMARY KEY (
+            mno -- 강사번호
+        );
+
+-- 강사 유니크 인덱스
+CREATE UNIQUE INDEX UIX_tcher
+    ON tcher ( -- 강사
+        acc_no ASC, -- 통장번호
+        bank ASC    -- 은행명
+    );
+
+-- 강의
+CREATE TABLE lect (
+    lno     INTEGER      NOT NULL COMMENT '강의번호', -- 강의번호
+    titl    VARCHAR(255) NOT NULL COMMENT '강의명', -- 강의명
+    sdt     DATE         NOT NULL COMMENT '시작일', -- 시작일
+    edt     DATE         NOT NULL COMMENT '종료일', -- 종료일
+    qnty    INTEGER      NOT NULL COMMENT '최대수용인원', -- 최대수용인원
+    pric    INTEGER      NOT NULL COMMENT '강의료', -- 강의료
+    nat_sup CHAR(1)      NOT NULL COMMENT '정부지원여부', -- 정부지원여부
+    sup_typ VARCHAR(50)  NOT NULL COMMENT '지원타입', -- 지원타입
+    dsct    TEXT         NOT NULL COMMENT '설명', -- 설명
+    rno     INTEGER      NULL     COMMENT '강의실번호', -- 강의실번호
+    mno     INTEGER      NULL     COMMENT '매니저번호' -- 매니저번호
+)
+COMMENT '강의';
+
+-- 강의
+ALTER TABLE lect
+    ADD CONSTRAINT PK_lect -- 강의 기본키
+        PRIMARY KEY (
+            lno -- 강의번호
+        );
+
+-- 강의 인덱스
+CREATE INDEX IX_lect
+    ON lect( -- 강의
+        titl ASC -- 강의명
+    );
+
+ALTER TABLE lect
+    MODIFY COLUMN lno INTEGER NOT NULL AUTO_INCREMENT COMMENT '강의번호';
+
+-- 강의실
+CREATE TABLE room (
+    rno  INTEGER     NOT NULL COMMENT '강의실번호', -- 강의실번호
+    loc  VARCHAR(50) NOT NULL COMMENT '지점명', -- 지점명
+    name VARCHAR(50) NOT NULL COMMENT '강의실명', -- 강의실명
+    qnty INTEGER     NOT NULL COMMENT '수용인원' -- 수용인원
+)
+COMMENT '강의실';
+
+-- 강의실
+ALTER TABLE room
+    ADD CONSTRAINT PK_room -- 강의실 기본키
+        PRIMARY KEY (
+            rno -- 강의실번호
+        );
+
+-- 강의실 유니크 인덱스
+CREATE UNIQUE INDEX UIX_room
+    ON room ( -- 강의실
+        loc ASC,  -- 지점명
+        name ASC  -- 강의실명
+    );
+
+ALTER TABLE room
+    MODIFY COLUMN rno INTEGER NOT NULL AUTO_INCREMENT COMMENT '강의실번호';
+
+-- 매니저
+CREATE TABLE mgr (
+    mno  INTEGER     NOT NULL COMMENT '매니저번호', -- 매니저번호
+    dept VARCHAR(50) NULL     COMMENT '부서', -- 부서
+    posi VARCHAR(50) NULL     COMMENT '직위', -- 직위
+    fax  VARCHAR(20) NULL     COMMENT '팩스' -- 팩스
+)
+COMMENT '매니저';
+
+-- 매니저
+ALTER TABLE mgr
+    ADD CONSTRAINT PK_mgr -- 매니저 기본키
+        PRIMARY KEY (
+            mno -- 매니저번호
+        );
+
+-- 수강신청
+CREATE TABLE lect_appl (
+    lano INTEGER  NOT NULL COMMENT '수강신청번호', -- 수강신청번호
+    lno  INTEGER  NOT NULL COMMENT '강의번호', -- 강의번호
+    mno  INTEGER  NOT NULL COMMENT '수강생번호', -- 수강생번호
+    rdt  DATETIME NOT NULL COMMENT '신청일', -- 신청일
+    stat INTEGER  NULL     COMMENT '진행상태' -- 진행상태
+)
+COMMENT '수강신청';
+
+-- 수강신청
+ALTER TABLE lect_appl
+    ADD CONSTRAINT PK_lect_appl -- 수강신청 기본키
+        PRIMARY KEY (
+            lano -- 수강신청번호
+        );
+
+-- 수강신청 유니크 인덱스
+CREATE UNIQUE INDEX UIX_lect_appl
+    ON lect_appl ( -- 수강신청
+        lno ASC, -- 강의번호
+        mno ASC  -- 수강생번호
+    );
+
+ALTER TABLE lect_appl
+    MODIFY COLUMN lano INTEGER NOT NULL AUTO_INCREMENT COMMENT '수강신청번호';
+
+-- 강의실사진
+CREATE TABLE room_phot (
+    rpno INTEGER      NOT NULL COMMENT '강의실사진번호', -- 강의실사진번호
+    rno  INTEGER      NOT NULL COMMENT '강의실번호', -- 강의실번호
+    phot VARCHAR(255) NOT NULL COMMENT '사진' -- 사진
+)
+COMMENT '강의실사진';
+
+-- 강의실사진
+ALTER TABLE room_phot
+    ADD CONSTRAINT PK_room_phot -- 강의실사진 기본키
+        PRIMARY KEY (
+            rpno -- 강의실사진번호
+        );
+
+ALTER TABLE room_phot
+    MODIFY COLUMN rpno INTEGER NOT NULL AUTO_INCREMENT COMMENT '강의실사진번호';
+
+-- 멤버
+CREATE TABLE memb (
+    mno      INTEGER      NOT NULL COMMENT '멤버번호', -- 멤버번호
+    name     VARCHAR(50)  NOT NULL COMMENT '이름', -- 이름
+    tel      VARCHAR(20)  NOT NULL COMMENT '전화', -- 전화
+    email    VARCHAR(40)  NOT NULL COMMENT '이메일', -- 이메일
+    pwd      VARCHAR(100) NOT NULL COMMENT '암호', -- 암호
+    phot     VARCHAR(255) NULL     COMMENT '사진', -- 사진
+    ano      INTEGER      NULL     COMMENT '주소번호', -- 주소번호
+    det_addr VARCHAR(255) NULL     COMMENT '상세주소', -- 상세주소
+    finl_edu VARCHAR(50)  NULL     COMMENT '최종학력', -- 최종학력
+    maj      VARCHAR(50)  NULL     COMMENT '전공', -- 전공
+    sch_nm   VARCHAR(50)  NULL     COMMENT '최종학교' -- 최종학교
+)
+COMMENT '멤버';
+
+-- 멤버
+ALTER TABLE memb
+    ADD CONSTRAINT PK_memb -- 멤버 기본키
+        PRIMARY KEY (
+            mno -- 멤버번호
+        );
+
+-- 멤버 유니크 인덱스
+CREATE UNIQUE INDEX UIX_memb
+    ON memb ( -- 멤버
+        email ASC -- 이메일
+    );
+
+-- 멤버 인덱스
+CREATE INDEX IX_memb
+    ON memb( -- 멤버
+        name ASC -- 이름
+    );
+
+ALTER TABLE memb
+    MODIFY COLUMN mno INTEGER NOT NULL AUTO_INCREMENT COMMENT '멤버번호';
+
+-- 주소
+CREATE TABLE addr (
+    ano      INTEGER      NOT NULL COMMENT '주소번호', -- 주소번호
+    pst_no   VARCHAR(5)   NOT NULL COMMENT '우편번호', -- 우편번호
+    bas_addr VARCHAR(255) NOT NULL COMMENT '기본주소' -- 기본주소
+)
+COMMENT '주소';
+
+-- 주소
+ALTER TABLE addr
+    ADD CONSTRAINT PK_addr -- 주소 기본키
+        PRIMARY KEY (
+            ano -- 주소번호
+        );
+
+-- 주소 인덱스
+CREATE INDEX IX_addr
+    ON addr( -- 주소
+        pst_no ASC -- 우편번호
+    );
+
+ALTER TABLE addr
+    MODIFY COLUMN ano INTEGER NOT NULL AUTO_INCREMENT COMMENT '주소번호';
+
+-- 강의배정
+CREATE TABLE lect_tcher (
+    lno INTEGER NOT NULL COMMENT '강의번호', -- 강의번호
+    mno INTEGER NOT NULL COMMENT '강사번호' -- 강사번호
+)
+COMMENT '강의배정';
+
+-- 강의배정
+ALTER TABLE lect_tcher
+    ADD CONSTRAINT PK_lect_tcher -- 강의배정 기본키
+        PRIMARY KEY (
+            lno, -- 강의번호
+            mno  -- 강사번호
+        );
+
+-- 수강생
+ALTER TABLE stnt
+    ADD CONSTRAINT FK_memb_TO_stnt -- 멤버 -> 수강생
+        FOREIGN KEY (
+            mno -- 수강생번호
+        )
+        REFERENCES memb ( -- 멤버
+            mno -- 멤버번호
+        );
+
+-- 강사
+ALTER TABLE tcher
+    ADD CONSTRAINT FK_memb_TO_tcher -- 멤버 -> 강사
+        FOREIGN KEY (
+            mno -- 강사번호
+        )
+        REFERENCES memb ( -- 멤버
+            mno -- 멤버번호
+        );
+
+-- 강의
+ALTER TABLE lect
+    ADD CONSTRAINT FK_mgr_TO_lect -- 매니저 -> 강의
+        FOREIGN KEY (
+            mno -- 매니저번호
+        )
+        REFERENCES mgr ( -- 매니저
+            mno -- 매니저번호
+        );
+
+-- 강의
+ALTER TABLE lect
+    ADD CONSTRAINT FK_room_TO_lect -- 강의실 -> 강의
+        FOREIGN KEY (
+            rno -- 강의실번호
+        )
+        REFERENCES room ( -- 강의실
+            rno -- 강의실번호
+        );
+
+-- 매니저
+ALTER TABLE mgr
+    ADD CONSTRAINT FK_memb_TO_mgr -- 멤버 -> 매니저
+        FOREIGN KEY (
+            mno -- 매니저번호
+        )
+        REFERENCES memb ( -- 멤버
+            mno -- 멤버번호
+        );
+
+-- 수강신청
+ALTER TABLE lect_appl
+    ADD CONSTRAINT FK_stnt_TO_lect_appl -- 수강생 -> 수강신청
+        FOREIGN KEY (
+            mno -- 수강생번호
+        )
+        REFERENCES stnt ( -- 수강생
+            mno -- 수강생번호
+        );
+
+-- 수강신청
+ALTER TABLE lect_appl
+    ADD CONSTRAINT FK_lect_TO_lect_appl -- 강의 -> 수강신청
+        FOREIGN KEY (
+            lno -- 강의번호
+        )
+        REFERENCES lect ( -- 강의
+            lno -- 강의번호
+        );
+
+-- 강의실사진
+ALTER TABLE room_phot
+    ADD CONSTRAINT FK_room_TO_room_phot -- 강의실 -> 강의실사진
+        FOREIGN KEY (
+            rno -- 강의실번호
+        )
+        REFERENCES room ( -- 강의실
+            rno -- 강의실번호
+        );
+
+-- 멤버
+ALTER TABLE memb
+    ADD CONSTRAINT FK_addr_TO_memb -- 주소 -> 멤버
+        FOREIGN KEY (
+            ano -- 주소번호
+        )
+        REFERENCES addr ( -- 주소
+            ano -- 주소번호
+        );
+
+-- 강의배정
+ALTER TABLE lect_tcher
+    ADD CONSTRAINT FK_tcher_TO_lect_tcher -- 강사 -> 강의배정
+        FOREIGN KEY (
+            mno -- 강사번호
+        )
+        REFERENCES tcher ( -- 강사
+            mno -- 강사번호
+        );
+
+-- 강의배정
+ALTER TABLE lect_tcher
+    ADD CONSTRAINT FK_lect_TO_lect_tcher -- 강의 -> 강의배정
+        FOREIGN KEY (
+            lno -- 강의번호
+        )
+        REFERENCES lect ( -- 강의
+            lno -- 강의번호
+        );
 ```
 
-```sql
-select all loc from room;
-```
-
-- all은 생략할 수 있다.
+## 2. 데이터 준비
 
 ```sql
-select loc from room;
-```
-
-## distinct
-
-- 중복 값을 한 개만 추출할 때 distinct 를 붙인다.
-
-```sql
-select distinct 컬럼명 from 테이블명;
-```
-
-```sql
-select distinct loc from room;
-```
-
-- 컬럼이 2 개 이상일 때 그 컬럼들의 값이 모두 같은 경우에만 한 개로 간주한다.
-
-```sql
-select distinct loc, name from room;
-```
-
-# 2. order by
-
-- 기본 인덱스 컬럼을 기준으로 정렬한다.
-
-```sql
-select rno, loc, name
-from room;
-```
-
-## (1) order by ~ asc
-
-- 이름의 오름 차순으로 정렬하기 (ascendant)
-
-```sql
-select rno, loc, name 
-from room
-order by name asc;
-```
-
-- asc는 생략 가능하다.
-
-```sql
-select rno, loc, name 
-from room
-order by name;
-```
-
-- 위의 코드에서 select rno, loc만 하면?
-    - 실행 순서가 from → order by → select이므로 OK!
-
-```sql
-select rno, loc
-from room
-order by name;
-```
-
-## (2) order by ~ desc
-
-- 이름의 내림 차순으로 정렬하기 (descendant)
-
-```sql
-select rno, loc, name 
-from room
-order by name desc;
-```
-
-- 이름은 오름 차순, 지점명도 오름 차순으로 정렬하기
-    - 이름으로 먼저 정렬하고, 그 안에서 지점명으로 정렬한다.
-
-```sql
-select rno, loc, name 
-from room
-order by name asc, loc asc;
-```
-
-- 이름은 오름 차순, 지점명은 내림 차순으로 정렬하기
-    - 이름으로 먼저 정렬하고, 그 안에서 지점명으로 정렬한다.
-
-```sql
-select rno, loc, name 
-from room
-order by name asc, loc desc;
-```
-
-- 지점명은 오름 차순으로, 이름은 오름 차순  정렬하기
-    - 지점명으로 먼저 정렬하고, 그 안에서 이름으로 정렬한다.
-
-```sql
-select rno, loc, name 
-from room
-order by loc asc, name asc;
-```
-
-# 3. 라벨명
-
-## (1) 라벨명 붙이기
-
-- as로 컬럼에 라벨명(별명)을 붙일 수 있다.
-- 라벨명을 지정하지 않으면 컬럼명이 라벨명이 된다.
-
-```sql
-select rno as room_no, loc as location, name 
-from room;
-```
-
-- as는 생략 가능하다.
-
-```sql
-select rno room_no, loc location, name 
-from room;
-```
-
-- 라벨명에 공백을 넣고 싶으면 ' ' 안에 작성한다.
-
-```sql
-select rno 'room no', loc location, name 
-from room;
-```
-
-- 복잡한 형식으로 출력할 경우 라벨명(별명)을 부여한다.
-
-```sql
-/* 예) 강의실명(지점명) */
-select concat(name, '(', loc, ')')
-from room;
-```
-
-```sql
-select concat(name, '(', loc, ')') **title**
-from room;
-```
-
-- 컬럼에 저장된 데이터의 개수를 알 수 있다.
-
-```sql
-select count(*) 
-from room;
-
-select count(*) cnt
-from room;
-
-select count(*) cnt
-from room
-where loc='서초';
-```
-
-# 4. union 과 union all
-
-- select 결과 합치기
-
-## (1) union
-
-- 중복 값 자동 제거 (union은 합집합을 의미)
-
-```sql
-select distinct bank from stnt
-**union** 
-select distinct bank from tcher;
-```
-
-## (2) union all
-
-- 중복 값 제거 안함 (all 생략 불가)
-
-```sql
-select distinct bank from stnt
-**union all**
-select distinct bank from tcher;
-```
-
-# 5. join
-
-- 서로 관련된 테이블의 데이터를 연결하여 추출하는 방법
-- 기법
-
-    1) CROSS 조인
-
-    2) NATURAL 조인
-
-    3) JOIN ~ ON
-
-    4) OUTER JOIN
-
-## (1) **CROSS JOIN**
-
-- 두 테이블의 데이터를 1:1로 모두 연결한다.
-- cross join은 레코드의 상관 관계에 없이 연결되기 때문에 실무에서 거의 사용되지 않는다.
-
-```sql
-select 컬럼명, 컬럼명, 컬럼명
-from 테이블명 cross join 테이블명;
-```
-
-- mno가 두 테이블에 있을 경우 어떤 테이블의 컬럼인지 지정하지 않으면 실행 오류!
-- memb 테이블의 데이터와 stnt 테이블의 데이터를 cross join하여 레코드를 출력하라.
-
-```sql
-select mno, name, mno, work, bank
-from memb cross join stnt;
-/* ERROR 1052 (23000): Column 'mno' in field list is ambiguous */
-```
-
-- select  컬럼이 두 테이블 모두 있을 경우, 컬럼명 앞에 테이블명을 명시하여 구분하라!
-
-```sql
-select memb.mno, name, stnt.mno, work, bank
-from memb cross join stnt;
-```
-
-- 예전 문법
-
-```sql
-select memb.mno, name, stnt.mno, work, bank
-from memb, stnt;
-```
-
-- 컬럼명 앞에 테이블명을 붙이면 너무 길다.
-    - 테이블에 별명을 부여하고 그 별명을 사용하여 컬럼을 지정하라.
-
-```sql
-select 테이블별명.컬럼명, 컬럼명, 테이블별명.컬럼명, 컬럼명
-from 테이블명 테이블별명 cross join 테이블명 테이블별명;
-```
-
-```sql
-select m.mno, name, s.mno, work, bank
-from memb m cross join stnt s;  
-```
-
-- 예전 문법
-
-```sql
-select m.mno, name, s.mno, work, bank
-from memb m, stnt s;
-```
-
-## (2) **NATURAL JOIN**
-
-- Natural Join :  같은 이름을 가진 컬럼 값을 기준으로 레코드를 연결한다.
-
-```sql
-select 테이블별명.컬럼명, 컬럼명, 테이블별명.컬럼명, 컬럼명
-from 테이블명 테이블별명 natural join 테이블명 테이블별명;
-```
-
-- mno라는 이름을 가진 컬럼 값을 기준으로 레코드를 연결한다.
-
-```sql
-select m.mno, name, s.mno, work, bank
-from memb m natural join stnt s;   
-```
-
-- 예전 문법
-
-```sql
-select m.mno, name, s.mno, work, bank
-from memb m, stnt s
-where m.mno=s.mno;
-```
-
-### **natural join 의 문제점 I**
-
-1) 두 테이블의 조인 기준이 되는 컬럼 이름이 다를 때 연결되지 못한다.
-
-2) 상관 없는 컬럼과 이름이 우연히 같을 때 잘못 연결된다.
-
-3) 같은 이름의 컬럼이 여러 개 있을 경우 잘못 연결된다. 모든 컬럼의 값이 일치할 경우에만 연결되기 때문이다.
-
-- 만약에 두 테이블에 같은 이름을 가진 컬럼이 여러 개 있다면, **join ~ using** (기준컬럼) 을 사용하여 두 테이블의 데이터를 연결할 때 기준이 될 컬럼을 지정한다.
-
-```sql
-select m.mno, name, s.mno, work, bank
-from memb m join stnt s using (mno);
-```
-
-### **natural join 의 문제점 II**
-
-- 두 테이블에 같은 이름의 컬럼이 없을 경우 연결하지 못한다.
-- 만약 두 테이블에 같은 이름을 가진 컬럼이 없으면, natural join을 수행하지 못한다. 또한 join using 으로도 해결할 수 없다. 이럴 경우 **(inner) join ~ on** 컬럼a=컬럼b 문법을 사용하여 각 테이블의 어떤 컬럼과 값을 비교할 것인지 지정하라!
-
-```sql
-select m.mno, name, s.mno, work, bank
-from memb m inner join stnt s on m.mno=s.mno;
-```
-
-## (3) INNER JOIN
-
-- Iner Join : 각 테이블의 어떤 컬럼과 비교할 것인지 지정하여 레코드를 연결한다.
-
-```sql
-select 테이블별명A.컬럼명, 컬럼명, 테이블별명B.컬럼명, 컬럼명
-from 테이블명 테이블별명A inner join 테이블명 테이블별명B on A.컬럼=B.컬럼 ;
-```
-
-- inner는 생략 가능하다.
-
-```sql
-select m.mno, name, s.mno, work, bank
-from memb m join stnt s on m.mno=s.mno;
-/* 즉 inner join 은 기준 컬럼의 값이 일치할 때만 데이터를 연결한다. */
-```
-
-- 예전 조인 문법 = inner join
-
-```sql
-select m.mno, name, s.mno, work, bank
-from memb m, stnt s
-where m.mno=s.mno;
-```
-
-### **[inner] join ~ on 의 문제점 I**
-
-- 반드시 on 에서 지정한 컬럼의 값이 같을 경우에만 두 테이블의 데이터가 연결된다.
-- 같은 값을 갖는 데이터가 없다면 연결되지 않고, 결과로 출력되지 않는다.
-
-- 전체 강의 목록
-
-```sql
-select lno, titl, rno, mno from lect;
-```
-
-- 전체 강의실 목록
-
-```sql
-select rno, loc, name from room;
-```
-
-- 강의 테이블에서 강의명을 가져오고, 강의실 테이블에서 지점명과 강의실명을 가져오자.
-
-```sql
-select 
-    l.lno, 
-    l.titl, 
-    r.rno, 
-    r.loc, 
-    r.name
-from lect l inner join room r on l.rno=r.rno;
-```
-
-- inner join의 경우, **강의실이 아직 지정되지 않은 강의의 경우 강의실 테이블의 데이터와 연결하지 못해 결과로 출력되지 않는 문제**가 있다.
-
-### **inner join의 문제점 예 II**
-
-- 모든 강의장 이름을 출력하라.
-- 단 강의장에 강의가 배정된 경우 그 강의 이름도 출력하라.
-
-```sql
-select 
-  r.rno, 
-  r.name, 
-  r.loc, 
-  l.titl
-from room r inner join lect l on r.rno = l.rno;
-```
-
-- 만약 기준 컬럼의 값과 일치하는 데이터가 없어서 다른 테이블의 데이터와 연결되지 않았다 하더라도 결과로 뽑아내고 싶다면 **outer join**을 사용하라!
-- 즉 아직 강의실이 배정되지 않은 강의 데이터도 출력하고 싶을 때 출력하고 싶은 테이블을 바깥쪽 테이블로 지정하라!
-
-## (4) **OUTER JOIN**
-
-### **right outer join ~ on**
-
-- **오른쪽(right) 테이블을 기준으로** 왼쪽 데이터를 붙여서 볼 때 사용
-
-```sql
-select 
-    l.lno, 
-    l.titl, 
-    r.rno, 
-    r.loc, 
-    r.name
-from lect l right outer join room r on l.rno=r.rno;
-/* room을 기준으로 lect 데이터를 연결한다. 
- * 만약 room과 일치하는 데이터가 lect에 없더라도 room 데이터를 출력한다!
- */
-```
-
-### **left outer join ~ on**
-
-- **왼쪽(left) 테이블을 기준으로** 오른쪽의 데이터를 붙여서 볼때 사용
-
-```sql
-select 
-    l.lno, 
-    l.titl, 
-    r.rno, 
-    r.loc, 
-    r.name
-from lect l left outer join room r on l.rno=r.rno;
-/* lect을 기준으로 room 데이터를 연결한다. 
- * 만약 lect와 일치하는 데이터가 room에 없더라도 lect 데이터를 출력한다!
- */
-```
-
-- 요구사항
-    - 모든 멤버의 번호와 이름을 출력하라!
-    - 단 학생의 경우 재직여부도 출력하라!
-
-```sql
--- 1) 모든 멤버 데이터 출력하기
-select mno, name
-from memb;
-
--- 2) 학생 데이터를 가져와서 연결하기
-select mno, name, work /* mno는 fk이면서도 pk */
-from memb natural join stnt;
-
-select mno, name, work
-from memb join stnt using(mno);
-
-select memb.mno, name, work
-from memb, stnt
-where memb.mno=stnt.mno;
-
-select memb.mno, name, work
-from memb **inner** **join** stnt **on** memb.mno=stnt.mno;
-
-select memb.mno, name, work
-from memb **join** stnt **on** memb.mno=stnt.mno; /* inner 생략됨 */
-
-select m.mno, name, work
-from memb m join stnt s on m.mno=s.mno;
-
-/* 안타깝게도 위의 SQL문은 학생 목록만 출력한다.
-    왜? 
-		memb테이블의 데이터와 stnt 테이블의 데이터를 
-    연결할 때 mno가 같은 데이터만 연결하여 추출하기 때문이다.
-   해결책!      
-    상대 테이블(stnt)에 연결할 대상(데이터)이 없더라도
-    select에서 추출하는 방법 */
-select m.mno, name, work
-from memb m **left outer join** stnt s **on** m.mno=s.mno;
-```
-
-## (5) **여러 테이블 연결하기**
-
-- 여러 번의 joining을 통해 여러 테이블의 데이터를 연결할 수 있다.
-
-- 다음의 결과가 출력될 수 있도록 수강 신청 데이터를 출력하시오.
-
-    수강신청번호, 강의명, 학생명, 재직여부, 수강신청일, 강의실명, 매니저명, 직위
-
-```sql
-/* 1단계: 수강신청 데이터를 출력 */
-select la.lano, la.lno, la.mno, la.rdt
-from lect_appl la;  
-```
-
-```sql
-/* 2단계: 수강신청한 학생의 번호 대신 이름을 출력 */
-select la.lano, la.lno, m.name, la.rdt
-from lect_appl la 
-			**inner join** memb m **on** la.mno=m.mno;
-			/* lect_appl 테이블에 memb 테이블을 연결 */
-```
-
-```sql
-/* 3단계: 수강 신청한 학생의 재직 여부 출력
- * => inner join 에서 inner는 생략 가능 
- */
-select la.lano, la.lno, m.name, s.work, la.rdt
-from lect_appl la 
-        **inner** **join** memb m **on** la.mno=m.mno
-        **inner** **join** stnt s **on** la.mno=s.mno;
-				/* lect_appl 테이블에 memb, stnt 테이블을 연결 */
-```
-
-```sql
-/* 4단계: 수상신청한 강의 번호 대신 강의명을 출력 */
-select la.lano, l.titl, m.name, s.work, la.rdt, l.rno
-from lect_appl la 
-        **inner** **join** memb m **on** la.mno=m.mno
-        **inner** **join** stnt s **on** la.mno=s.mno 
-        **inner** **join** lect l **on** la.lno=l.lno;
-				/* lect_appl 테이블에 memb, stnt, lect 테이블을 연결 */
-```
-
-```sql
-/* 5단계: 강의실 이름을 출력한다.
- * => 강의실 번호는 lect 테이블 데이터에 있다.
- * => 강의실 이름은 room 테이블 데이터에 있다. 
- */
-select la.lano, l.titl, m.name, s.work, la.rdt, r.name, l.mno
-from lect_appl la 
-        inner join memb m on la.mno=m.mno
-        inner join stnt s on la.mno=s.mno 
-        inner join lect l on la.lno=l.lno
-        **left outer join** room r **on** l.rno=r.rno;
-				/* lect 테이블을 기준으로 room 데이터를 연결 */
-```
-
-```sql
-/* 6단계: 매니저 이름을 출력
- * => 매니저 번호는 lect 테이블에 있다.
- * => 매니저 이름은 memb 테이블에 있다. 
- */
-select 
-  la.lano, 
-  l.titl, 
-  m.name member_name, /* 데이터를 보기 편하도록 별명 추가 */
-  s.work, 
-  la.rdt, 
-  r.name room_name, 
-  m2.name manager_name
-from lect_appl la 
-        inner join memb m on la.mno=m.mno
-        inner join stnt s on la.mno=s.mno 
-        inner join lect l on la.lno=l.lno
-        inner left outer join room r on l.rno=r.rno 
-        **left outer join** memb m2 **on** l.mno=m2.mno; 
-				/* lect 테이블을 기준으로 memb 데이터를 연결 */
-```
-
-```sql
-/* 7단계: 매니저의 직위 출력
- * => 매니저 번호는 lect 테이블 있다.
- * => 매니저 직위는 mgr 테이블에 있다.  
- */
-select 
-  la.lano, 
-  l.titl, 
-  m.name student_name, 
-  s.work, 
-  la.rdt, 
-  r.name room_name, 
-  m2.name manager_name, 
-  mr.posi
-from lect_appl la 
-        inner join memb m on la.mno=m.mno
-        inner join stnt s on la.mno=s.mno 
-        inner join lect l on la.lno=l.lno
-        inner left outer join room r on l.rno=r.rno 
-        inner left outer join memb m2 on l.mno=m2.mno 
-        **left outer join** mgr mr **on** l.mno=mr.mno;
-				/* lect 테이블을 기준으로 mgr 데이터를 연결 */
-```
-
-# 6. **서브 쿼리**
-
-- 쿼리문 안에 쿼리문을 실행하는 기법
-- 직관적이기 때문에 사용하기가 편리하다.
-- 하지만, 성능 문제를 생각하면서 사용해야 한다.
-
-## (1) **select 절에 서브쿼리 사용하기**
-
-```sql
-/* 1단계: 수강신청 데이터를 출력 */
-select 
-  la.lano, 
-  la.lno, 
-  la.mno, 
-  date_format(la.rdt, '%Y-%m-%d') reg_dt
-from lect_appl la;
-```
-
-```sql
-/* 2단계 : 서브 쿼리를 이용하여 강의명을 가져오기 
- * => 단, 컬럼 자리에 사용할 때는 결과값이 한 개여야 한다.
- *    결과 값이 여러 개가 리턴된다면 컬럼 값으로 사용할 수 없기 때문에 오류이다.
- *    또한 컬럼 개수도 한 개여야 한다.
- */
-select 
-    la.lano, 
-    **(select titl from lect where lno=la.lno)** as lect_title, 
-    la.mno, 
-    la.rdt
-from lect_appl la;
-```
-
-```sql
-/* 3단계 : 서브 쿼리를 이용하여 학생명을 가져오기 */
-select 
-    la.lano, 
-    (select titl from lect where lno=la.lno) as lect_title, 
-    (select name from memb where mno=la.mno) as stud_name,
-    la.rdt
-from lect_appl la;
-```
-
-## (2) **from 절에 서브쿼리 사용하기**
-
-```sql
-/* 0단계 : 강의 정보를 가져온다. */
-select
-    l.lno,
-    l.titl,
-    l.rno,
-    l.mno
-from lect l;
-```
-
-```sql
-/* 1단계 : 강의 상세 정보를 가져오는 select를 준비한다.
- * => 서브 쿼리를 이용하여 강의실 이름과 매니저 이름, 직위 정보를 가져오기 */
-select 
-    l.lno, 
-    l.titl, 
-    (select name from room where rno=l.rno) as room_name, 
-    (select name from memb where mno=l.mno) as manager_name,
-    (select posi from mgr where mno=l.mno) as manager_posi
-from lect l;
-```
-
-```sql
-/* 2단계: 위에서 준비한 select 결과를 가상 테이블로 사용하여 
-         기존의 lect_appl 테이블과 조인한다. */
-select 
-    la.lano, 
-    /*(select titl from lect where lno=la.lno) as lect_title,*/ 
-    (select name from memb where mno=la.mno) as stud_name,
-    lec.titl,
-    lec.room_name,
-    lec.manager_name,
-    lec.manager_posi
-from lect_appl la 
-    join (select /* 가상 테이블 */
-              l.lno, 
-              l.titl, 
-              (select name from room where rno=l.rno) as room_name, 
-              (select name from memb where mno=l.mno) as manager_name,
-              (select posi from mgr where mno=l.mno) as manager_posi
-          from lect l) as lec on la.lno=lec.lno;
-```
-
-- from 절에서 반복적으로 사용하는 서브쿼리가 있다면, 가상 테이블인 view로 정의해놓고 사용하는 것이 편하다.
-
-```sql
-/* from 절에서 반복적으로 사용하는 서브 쿼리를 가상 테이블인 view로 정의하기 */ 
-create view lect2 as
-select 
-    l.lno, 
-    l.titl, 
-    (select name from room where rno=l.rno) as room_name, 
-    l.mno as manager_no,
-    (select name from memb where mno=l.mno) as manager_name,
-    (select posi from mgr where mno=l.mno) as manager_posi
-from lect l;
-```
-
-```sql
-/* 위의 질의문을 view를 사용하여 다시 작성해보자! */
-select 
-    la.lano, 
-    (select name from memb where mno=la.mno) as stud_name,
-    lec.titl,
-    lec.room_name,
-    lec.manager_name,
-    lec.manager_posi
-from lect_appl la 
-    join lect2 lec on la.lno=lec.lno;
-```
-
-## (3) **where 절에 서브쿼리 사용하기**
-
-- where ~ in ~
-- where xxx in ('aaa', 'bbb') : xxx가 'aaa'이거나 'bbb'인 경우
-
-```sql
-/* 과장 또는 대리 매니저가 담당하고 있는 수강 신청만 추출하기 */
-select 
-    la.lano, 
-    /* (select titl from lect where lno=la.lno) as lect_title, */ 
-    (select name from memb where mno=la.mno) as stud_name,
-    lec.titl,
-    lec.room_name,
-    /* lec.manager_no, */
-    lec.manager_name,
-    lec.manager_posi
-from lect_appl la 
-    join lect2 as lec on la.lno=lec.lno 
-**where**
-    lec.manager_no in (select mno from mgr **where** posi in ('과장', '주임'));
+/* 강의실 데이터 준비 */
+insert into room(rno, loc, name, qnty) values(1, '강남', '501', 30);
+insert into room(rno, loc, name, qnty) values(2, '강남', '502', 30);
+insert into room(rno, loc, name, qnty) values(3, '강남', '503', 30);
+insert into room(rno, loc, name, qnty) values(4, '종로', '301', 30);
+insert into room(rno, loc, name, qnty) values(5, '종로', '302', 30);
+insert into room(rno, loc, name, qnty) values(6, '종로', '303', 30);
+insert into room(rno, loc, name, qnty) values(7, '서초', '301', 30);
+insert into room(rno, loc, name, qnty) values(8, '서초', '302', 30);
+insert into room(rno, loc, name, qnty) values(9, '서초', '501', 30);
+insert into room(rno, loc, name, qnty) values(10, '서초', '601', 30);
+
+/* 학생 데이터 입력 */
+insert into memb(mno, name, tel, email, pwd)
+values(100, 's100', '111-1111', 's100@', sha2('1111', 224));
+insert into memb(mno, name, tel, email, pwd)
+values(101, 's101', '111-1111', 's101@', sha2('1111', 224));
+insert into memb(mno, name, tel, email, pwd)
+values(102, 's102', '111-1111', 's102@', sha2('1111', 224));
+insert into memb(mno, name, tel, email, pwd)
+values(103, 's103', '111-1111', 's103@', sha2('1111', 224));
+insert into memb(mno, name, tel, email, pwd)
+values(104, 's104', '111-1111', 's104@', sha2('1111', 224));
+
+insert into stnt(mno, work, acc_no, bank)
+values(100, 'N', '1000', '비트은행');
+insert into stnt(mno, work, acc_no, bank)
+values(101, 'Y', '1001', '비트은행');
+insert into stnt(mno, work, acc_no, bank)
+values(102, 'N', '1002', '캠프은행');
+insert into stnt(mno, work, acc_no, bank)
+values(103, 'Y', '1003', '우리은행');
+insert into stnt(mno, work, acc_no, bank)
+values(104, 'N', '1004', '국민은행');
+
+/* 강사 데이터 입력 */
+insert into memb(mno, name, tel, email, pwd)
+values(200, 's200', '111-1111', 's200@', sha2('1111', 224));
+insert into memb(mno, name, tel, email, pwd)
+values(201, 's201', '111-1111', 's201@', sha2('1111', 224));
+insert into memb(mno, name, tel, email, pwd)
+values(202, 's202', '111-1111', 's202@', sha2('1111', 224));
+insert into memb(mno, name, tel, email, pwd)
+values(203, 's203', '111-1111', 's203@', sha2('1111', 224));
+insert into memb(mno, name, tel, email, pwd)
+values(204, 's204', '111-1111', 's204@', sha2('1111', 224));
+
+insert into tcher(mno, hr_pay, acc_no, bank)
+values(200, 10000, '2000', '신한은행');
+insert into tcher(mno, hr_pay, acc_no, bank)
+values(201, 20000, '2001', '농협');
+insert into tcher(mno, hr_pay, acc_no, bank)
+values(202, 15000, '2002', '기업은행');
+insert into tcher(mno, hr_pay, acc_no, bank)
+values(203, 25000, '2003', '우리은행');
+insert into tcher(mno, hr_pay, acc_no, bank)
+values(204, 30000, '2004', '국민은행');
+
+/* 매니저 데이터 입력 */
+insert into memb(mno, name, tel, email, pwd)
+values(300, 'm300', '111-1111', 'm300@', sha2('1111', 224));
+insert into memb(mno, name, tel, email, pwd)
+values(301, 'm301', '111-1111', 'm301@', sha2('1111', 224));
+insert into memb(mno, name, tel, email, pwd)
+values(302, 'm302', '111-1111', 'm302@', sha2('1111', 224));
+insert into memb(mno, name, tel, email, pwd)
+values(303, 'm303', '111-1111', 'm303@', sha2('1111', 224));
+insert into memb(mno, name, tel, email, pwd)
+values(304, 'm304', '111-1111', 'm304@', sha2('1111', 224));
+
+insert into mgr(mno, dept, posi)
+values(300, '시설관리', '주임');
+insert into mgr(mno, dept, posi)
+values(301, '시설관리', '대리');
+insert into mgr(mno, dept, posi)
+values(302, '회계', '과장');
+insert into mgr(mno, dept, posi)
+values(303, '교육', '주임');
+insert into mgr(mno, dept, posi)
+values(304, '교육', '과장');
+
+/* 200번 강사는 교육팀 과장이기도 하다.*/
+insert into mgr(mno, dept, posi)
+values(200, '교육', '과장');
+
+/* 강의 데이터 입력 */
+insert into lect(lno, titl, sdt, edt, qnty, pric, nat_sup, sup_typ, dsct)
+values(1, '자바프로그래밍', '2018-1-1', '2018-5-30', 30, 100, 'Y', '미취업자', 'ok');
+insert into lect(lno, titl, sdt, edt, qnty, pric, nat_sup, sup_typ, dsct)
+values(2, 'IoT프로그래밍', '2018-3-1', '2018-7-30', 30, 200, 'Y', '미취업자', 'ok');
+insert into lect(lno, titl, sdt, edt, qnty, pric, nat_sup, sup_typ, dsct)
+values(3, '윈도우프로그래밍', '2018-5-1', '2018-10-30', 30, 300, 'Y', '노동부', 'ok');
+
+/* 강의에 매니저 배정 */
+update lect set mno=303 where lno=1;
+update lect set mno=304 where lno=3;
+
+/* 강의에 강의실 배정 */
+update lect set rno=1 where lno=1;
+update lect set rno=4 where lno=2;
+
+/* 수강신청 데이터 입력 */
+insert into lect_appl(lano, lno, mno, rdt) values(1, 1, 100, '2017-11-2');
+insert into lect_appl(lano, lno, mno, rdt) values(2, 1, 101, '2017-11-3');
+insert into lect_appl(lano, lno, mno, rdt) values(3, 1, 102, '2017-11-4');
+insert into lect_appl(lano, lno, mno, rdt) values(4, 2, 104, '2017-12-6');
+insert into lect_appl(lano, lno, mno, rdt) values(5, 2, 100, '2017-12-7');
+insert into lect_appl(lano, lno, mno, rdt) values(6, 3, 101, '2017-10-8');
+insert into lect_appl(lano, lno, mno, rdt) values(7, 3, 102, '2017-11-9');
+insert into lect_appl(lano, lno, mno, rdt) values(8, 3, 104, '2017-11-11');
 ```
